--- a/css/main.css
+++ b/css/main.css
@@ -13,12 +13,15 @@ body {
   background-size: cover;
 }
 
-h1 {
-  margin: 0;
-  color: #FFFFFF;
+.main {
   position: absolute;
   left: 0;
   width: 100%;
   text-align: center;
-  top: 10%;
+  top: 5%;
+}
+
+h1,
+h5 {
+  color: #FFFFFF;
 }
